// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-grid-item;
  display: -ms-grid-itembox;
  display: grid-item;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<p
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-GridItem"
>
  Hello world
</p>
`;

exports[`composition hook should return with GridItem props 1`] = `
Object {
  "className": "css-1k6uz7u css-63it0p css-1qnz8fc bb-Box bb-GridItem",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-grid-item;
  display: -ms-grid-itembox;
  display: grid-item;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-GridItem"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-grid-item;
  display: -ms-grid-itembox;
  display: grid-item;
  grid-area: test;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 test bb-Box bb-GridItem"
>
  hello world
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-grid-item;
  display: -ms-grid-itembox;
  display: grid-item;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-GridItem"
>
  Hello world
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-grid-item;
  display: -ms-grid-itembox;
  display: grid-item;
  grid-area: a;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-GridItem"
>
  Hello world
</div>
`;

exports[`theming GridItem.base should render correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-grid-item;
  display: -ms-grid-itembox;
  display: grid-item;
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-GridItem"
>
  hello world
</div>
`;
